# SMU-OSP

./: .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
backend/backend/: settings.py
backend/board/: admin.py  models.py  urls.py  views.py
backend/board/migrations/: 0001_initial.py  0002_remove_post_photo_post_image.py  0003_rename_description_post_content_alter_post_image.py
backend/config/: celery.py  settings.py  urls.py
backend/posts/: urls.py  views.py
backend/posts/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_commit_user_issue_user_pr_user_score_user_star.py  0002_user_name_user_student_id_alter_user_github_email.py  0003_alter_user_student_id.py  0003_rename_commit_user_commits_rename_issue_user_issues_and_more.py  0004_alter_user_student_id.py  0004_remove_useractivity_stars.py  0005_alter_useractivity_activity_date.py  0005_remove_user_github_id_alter_user_github_email.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  api.ts  main.tsx  router.tsx  types.d.ts
frontend/src/components/: AuthContext.tsx  BoardDialog.tsx  Carousel.tsx  ChangePasswordDialog.tsx  CustomList.tsx  DeleteAccountDialog.tsx  Footer.tsx  GithubLogin.tsx  Header.tsx  LogInDialog.tsx  LoginDialog.tsx  MainUserList.tsx  PostDialog.tsx  PostList.tsx  RecentPostList.tsx  Root.tsx  (+3 more)
smu_osp_backend/: manage.py
smu_osp_backend/smu_osp_backend/: asgi.py  settings.py  urls.py  wsgi.py
(+13 files in other folders)
