[tool.poetry]
name = "smu-osp"
version = "0.1.0"
description = ""
authors = ["Youngmin Joo <ymjoo827@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-environ = "^0.11.2"
scrapy = "^2.12.0"
selenium = "^4.27.1"
bs4 = "^0.0.2"
scrapy-selenium = "^0.0.7"
scrapy-playwright = "^0.0.42"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
